styles.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  display: grid;
  width: 100vw;
  max-width: 100%;
  grid-template-columns: 1fr minmax(auto, 1200px) 1fr;
  grid-template-rows: repeat(3, max-content);

  gap: 30px;

  > section:nth-child(1) {
    min-height: 600px;
    grid-row: 1;
    grid-column: 1 / span 3;
    display: grid;
    padding-top: 30px;
    grid-template-columns: subgrid;
    grid-template-rows: minmax(min-content, calc(100dvh - 160px));
    background: linear-gradient(
      161deg,
      green 0%,
      green 65vh,
      white 65vh,
      white
    );
  }
  > section:nth-child(2) {
    grid-row: 2;
    grid-column: 1 / span 3;
    display: grid;
    grid-template-rows: 1fr;
    grid-template-columns: subgrid;

    > div {
      grid-row: 1;
      grid-column: 2;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: flex-start;
      gap: 20px;
    }
  }

  > section:nth-child(1) > div {
    grid-row: 1;
    grid-column: 2;
    padding: 50px 0px;
    /*
    display: grid;
    grid-template-rows: min-content;
    grid-template-columns: 40% 60%;*/

    display: flex;
    > div {
      grid-row: 1;
      grid-column: 1;

      max-width: 40%;
      display: grid;
      grid-template-rows: auto;
      grid-template-columns: auto;

      > picture {
        grid-row: 1;
        grid-column: 1;
        display: flex;

        > img:not(.icon):not(.icon2) {
          object-fit: cover;
          width: 100%;
          box-shadow: 1px 1px 2px 1px rgb(86, 82, 82);
        }
      }
      h1 {
        grid-column: 1;
        grid-row: 1;
        color: white;

        align-self: end;
        text-align: center;
      }
    }

    > section {
      grid-column: 2;
      grid-row: 1;
      max-height: 80%;
      align-self: center;
      line-height: 1.8;
      background-color: white;
      color: black;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: flex-start;
      gap: 30px;
      padding: 30px;
      box-shadow: 1px 1px 2px 1px rgb(88, 86, 86);

      footer {
        align-self: flex-end;
        display: flex;
        align-items: center;
        gap: 15px;
        padding-bottom: 30px;
      }
    }
  }

  > section:nth-child(2) > div > div {
    grid-auto-flow: row;
    grid-template-rows: auto;
    grid-template-columns: repeat(auto-fit, calc(33% - 20px));
    display: grid;
    flex-wrap: wrap;
    width: 100%;
    gap: 30px;
    justify-content: space-between;
    align-items: center;
    justify-items: stretch;
    align-content: stretch;

    > section {
      display: flex;
      flex-direction: column;
      box-shadow: 1px 1px 2px 1px rgb(128, 126, 126);

      img:not(.icon):not(.icon2) {
        width: 100%;
        max-height: 30vh;

        object-fit: cover;
        flex: 1;
      }
      > a {
        text-decoration: none;
      }
      > a > div {
        flex: 1;
        display: flex;
        flex-direction: column;
        padding: 15px;
        gap: 10px;

        > div {
          display: flex;
          justify-content: space-between;

          > div {
            display: flex;
            gap: 10px;
          }
        }
        p {
          font-size: calc(1vw + 1rem);
        }
      }
    }
  }
  > section:nth-child(3) {
    grid-row: 3;
    grid-column: 1 / span 3;
    background-color: green;

    display: grid;
    grid-template-rows: 1fr;
    grid-template-columns: subgrid;
    color: white;
    > div {
      grid-row: 1;
      grid-column: 2;
      display: flex;
      flex-wrap: wrap;
      gap: 20px;
      margin: 50px 0px;

      > div {
        gap: 30px;
        align-self: center;
        max-width: calc(45% - 10px);
        display: flex;
        flex-wrap: wrap;
        flex-direction: column;

        address {
          display: flex;
          flex-direction: column;

          > div {
            margin-top: 30px;
            display: flex;
            flex-direction: column;
            gap: 5px;

            > div {
              display: flex;
              gap: 20px;
              margin-top: 10px;
            }
          }
          a {
            margin-top: 10px;
            font-size: calc(1vw + 1rem);
            color: white;
            text-decoration: none;
            display: flex;
            gap: 0.8rem;
          }
        }
      }
      picture {
        max-width: calc(55% - 10px);
        img {
          max-width: 100%;
          object-fit: cover;
        }
      }
    }
  }
}

h1 {
  font-size: calc(10% + 3.3rem);
}
h2 {
  font-size: calc(10% + 2.5rem);
  font-weight: 520;
}

h3 {
  font-size: calc(10% + 2rem);
  font-weight: 450;
}
p {
  font-size: max(16px, calc(10% + 1rem));
  font-weight: 350;
}

.icon,
.icon2 {
  width: 20px;
  aspect-ratio: 1;

  box-shadow: none;
}

.icon2 {
  width: 30px;
}

@media (min-width: 601px) and (max-width: 1050px) {
  body {
    grid-template-columns: 1fr minmax(auto, 85%) 1fr;
  }
  .fake-image {
    width: 44%;
    aspect-ratio: 0.85;
    margin-top: -3rem;
    margin-left: -3rem;
    display: inline;
    float: left;
  }
  body > section:nth-child(1) {
    background: linear-gradient(156deg, green 0%, green 65%, white 65%, white);
    margin-bottom: 5em;
    grid-template-rows: auto;
  }
  body > section:nth-child(1) > div > div.important {
    grid-row: 1;
    grid-column: 1 / 3;
    grid-template-columns: subgrid;

    > picture.important {
      position: relative;
      left: -3rem;
      top: -3rem;
      z-index: 1;
      display: inline;

      > img.important {
        float: left;
        display: inline;
      }
    }
    > h1 {
      grid-row: 1;
      grid-column: 2;
      align-self: start;
      white-space: nowrap;
      position: relative;
      z-index: 1;
      left: -5rem;
      top: -3.3rem;
      max-width: max-content;
      display: inline;
    }
  }

  body > section:nth-child(1) > div {
    display: grid;
    grid-template-rows: auto;
    grid-template-columns: 40% 60%;
    height: fit-content;

    > section.important {
      grid-row: 1;
      grid-column: 1 / 3;
      /*
      position: absolute;
      top: 140px;
      left: 30px;
      */
      display: inline-block;
      /*width: calc(100% - 60px);*/
      max-height: 100%;
      height: 100%;
      shape-outside: url(headshot-cropped.jpg);

      > footer {
        display: none;
      }
    }
  }

  body > section:nth-child(2) > div > div {
    z-index: 1;
    grid-template-columns: repeat(auto-fit, calc(50% - 15px));
  }

  body > section:nth-child(2) > div > h2 {
    position: relative;
    top: 20px;
  }
}

@media (max-width: 600px) {
  body {
    overflow-x: hidden !important;
    max-width: 100%;
    width: auto !important;
  }
  .fake-image {
    display: none;
  }
  body > section:nth-child(1) {
    padding: 0px;
    > div {
      display: flex;
      flex-direction: column;
    }
    > div > div.important {
      gap: 30px;
      max-width: 100%;
      display: grid;
      grid-template-rows: max-content min-content;
      grid-template-columns: 1fr;

      > picture.important {
        grid-column: 1;
        grid-row: 1;
      }
    }
  }
  h2 {
    align-self: center;
  }
  body > section:nth-child(1) > div > div > section.important {
    box-shadow: none;
    grid-row: 2;
    grid-column: 1;
  }

  body > section:nth-child(1) > div > div > h1.important {
    font-size: 5rem;
    grid-column: 1;
    grid-row: 1;
    align-self: end;
  }
  body > section:nth-child(1) > div > div > section > footer.important {
    align-self: center;
  }

  body > section:nth-child(3) > div > div {
    max-width: 100%;
  }
  body > section:nth-child(3) > div > picture {
    max-width: 100%;
  }
  body > section:nth-child(3) > div > div > address > div > div {
    justify-content: center;
  }
  body > section:nth-child(2) > div > div {
    grid-template-columns: 1fr;
  }
}

@media (max-width: 397px) {
  body > section:nth-child(1).important {
    background: linear-gradient(
      156deg,
      green 0%,
      green 51vh,
      white 51vh,
      white
    );
    section.important {
      margin-top: 5em;
    }
  }
}

